# rusty-gbrl

./: .gitignore  README.md  package-lock.json  package.json
angular-ui/: README.md  angular.json  package-lock.json  package.json
angular-ui/.angular/cache/19.2.21/meshforge-angular-ui/: .tsbuildinfo
angular-ui/.angular/cache/19.2.21/meshforge-angular-ui/vite/deps_ssr/: _metadata.json
angular-ui/src/: index.html  styles.css
angular-ui/src/app/: app.component.ts
angular-ui/src/app/components/: index.ts
angular-ui/src/app/components/file-command/: file-command.component.ts
angular-ui/src/app/components/file-information/: file-information.component.ts
angular-ui/src/app/components/file-load/: file-load.component.ts
angular-ui/src/app/components/header/: header.component.ts
angular-ui/src/app/components/machine-coordinates-panel/: machine-coordinates-panel.component.ts
angular-ui/src/app/components/machine-state-display/: machine-state-display.component.ts
angular-ui/src/app/components/port-select/: port-select.component.ts
angular-ui/src/app/core/: index.ts  tauri.service.ts
angular-ui/src/app/features/port/: index.ts  port.service.ts
angular-ui/src/app/services/: index.ts
scripts/: setup-linux-deps.sh
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  port.rs
src/machines/grbl/: machine.rs  port.rs
src/machines/profiles/: mod.rs
ui/: index.html  main.js
