[package]
name = "meshforge-app"
version = "0.1.0"
edition = "2021"
description = "MeshForge CNC control — Tauri desktop shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
grbl-rs = { path = "..", features = ["serial"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
